@@ -1,23 +1,39 @@
 use Version::Raku:ver<0.0.1+>:auth<zef:lizmat>;
-use Version::Repology:ver<0.0.3+>:auth<zef:lizmat>;
+use Version::Repology:ver<0.0.5+>:auth<zef:lizmat>;
+use Version::Semver:ver<0.0.1+>:auth<zef:lizmat>;
 
 #- VERS::Type ------------------------------------------------------------------
-class VERS::Type:ver<0.0.3>:auth<zef:lizmat> {
+class VERS::Type:ver<0.0.4>:auth<zef:lizmat> {
 
     proto method Version(|) {*}
-    multi method Version(VERS::Type:)          { Version::Repology         }
-    multi method Version(VERS::Type: Str() $_) { Version::Repology.new($_) }
+    multi method Version(VERS::Type:)          { Version::Semver      }
+    multi method Version(VERS::Type: Str:D $_) { self.Version.new($_) }
 
     multi method Str(VERS::Type:) { self.^name.subst("VERS::") }
 
     method CALL-ME(VERS::Type:U: Str() $_) { ::("VERS::$_") }
+
+    method denatify(VERS::Type: Str:D $_) { $_ }
 }
 
 #- A ---------------------------------------------------------------------------
 class VERS::alpm is VERS::Type {
+    multi method Version(VERS::alpm: Str() $_) {
+        Version::Repology.new($_,
+          :any-is-patch,
+          :no-leading-zero
+        )
+    }
 }
 
 class VERS::apk is VERS::Type {
+    multi method Version(VERS::apk: Str() $_) {
+        Version::Repology.new($_,
+          :p-is-patch,
+          :leading-zero-alpha,
+          :additional-special(%(r => post-release)),
+        )
+    }
 }
 
 #- B ---------------------------------------------------------------------------
@@ -58,6 +74,18 @@ class VERS::docker is VERS::Type {
 
 #- G ---------------------------------------------------------------------------
 class VERS::gem is VERS::Type {
+    method denatify(VERS::gem: Str:D $_) {
+        if .starts-with("~>") {
+            my $version  := .substr(2);
+            my @parts = $version.split(/ \W+ /, :v);
+            @parts.pop; @parts.pop;  # lose last delimiter + part
+            @parts.push: @parts.pop.Int + 1;
+            ">=$version|<@parts.join"
+        }
+        else {
+            $_
+        }
+    }
 }
 
 class VERS::generic is VERS::Type {
@@ -114,10 +142,22 @@ class VERS::qpkg is VERS::Type {
 
 #- R ---------------------------------------------------------------------------
 class VERS::raku is VERS::Type {
+    multi method Version(VERS::raku:) { Version::Raku }
 
-    proto method Version(|) {*}
-    multi method Version(VERS::raku:)    { Version::Raku         }
-    multi method Version(VERS::raku: $_) { Version::Raku.new($_) }
+    method denatify(VERS::raku: Str:D $spec) {
+        die "Must have some version string" unless $spec;
+
+        my str @parts = $spec.split(".");
+        with @parts.first(*.starts-with('*'), :k) -> $index {
+            $index ?? ">=@parts.head($index).join('.')" !! '*'
+        }
+        orwith @parts.first(*.ends-with('+'), :k) -> $index {
+            ">=@parts.head($index + 1).join('.').chop()"
+        }
+        else {
+            $spec
+        }
+    }
 }
 
 class VERS::rpm is VERS::Type {
