@@ -11,7 +11,7 @@ my @simple =
  "<=1.0", "1.0", "2.0",
 ;
 
-plan 29 + @simple / 3;
+plan @simple / 3 + 35;
 
 sub check-vers($source, $ok, $nok, $stringified = $source) is test-assertion {
     subtest "Checking VERS '$source'" => {
@@ -56,9 +56,12 @@ check-vers "vers:raku/!=3.0|<2.0|>1.0", "1.0", "3.0",
   "vers:raku/!=3.0|>1.0|<2.0";
 
 for
-  "*",    "vers:raku/*",
-  "1.0",  "vers:raku/1.0",
-  "1.0+", "vers:raku/>=1.0"
+  "*",       "vers:raku/*",
+  "1.*",     "vers:raku/>=1",
+  "1.0",     "vers:raku/1.0",
+  "1.0.*",   "vers:raku/>=1.0",
+  "1.0.*.5", "vers:raku/>=1.0",
+  "1.0+",    "vers:raku/>=1.0"
 -> $source, $vers {
     is VERS.from-Version($source),         $vers, "$source from string";
     is VERS.from-Version($source.Version), $vers, "$source from Version";
